--- a/requirements.txt
+++ b/requirements.txt
@@ -2,26 +2,28 @@ asgiref==3.5.2
 attrs==21.4.0
 autobahn==22.6.1
 Automat==20.2.0
-certifi @ file:///opt/conda/conda-bld/certifi_1655968806487/work/certifi
 cffi==1.15.1
 channels==3.0.5
 constantly==15.1.0
 cryptography==37.0.4
 daphne==3.0.2
-Django @ file:///tmp/build/80754af9/django_1625585912945/work
+Django==3.2.5
 hyperlink==21.0.0
 idna==3.3
 incremental==21.3.0
-psycopg2 @ file:///home/builder/ci_310/psycopg2_1640792656405/work
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
 pycparser==2.21
 pyOpenSSL==22.0.0
-pytz @ file:///opt/conda/conda-bld/pytz_1654762638606/work
 service-identity==21.1.0
 six==1.16.0
-sqlparse @ file:///tmp/build/80754af9/sqlparse_1602184451250/work
+sqlparse==0.4.2
 Twisted==22.4.0
 txaio==22.2.1
-typing_extensions @ file:///opt/conda/conda-bld/typing_extensions_1647553014482/work
+typing_extensions==4.3.0
 zope.interface==5.4.0
+certifi==2020.6.20
+pytz==2022.1
+gunicorn
+django-heroku
+psycopg2>=2.8,<2.9
